Make debuggable, read shaders from virtual FS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,18 @@ if (DEFINED EMSCRIPTEN)
     set(CMAKE_EXECUTABLE_SUFFIX .html)
 
     # Target compile options and link options specific to WebAssembly with WebGL and SDL2
-    target_compile_options(Viewer PUBLIC "-Os" "-sUSE_SDL=2")
-    target_link_options(Viewer PUBLIC "-sUSE_WEBGL2=1" "-sUSE_SDL=2" "-sALLOW_MEMORY_GROWTH=1" "-sFULL_ES2=1" "-sWASM=1" "--shell-file=../index.html")
+    target_compile_options(Viewer PUBLIC -Os -sUSE_SDL=2)
+    target_link_options(Viewer PUBLIC
+        -sUSE_WEBGL2=1 
+        -sUSE_SDL=2 
+        -sALLOW_MEMORY_GROWTH=1 
+        -sFULL_ES2=1 
+        -sWASM=1 
+        --shell-file=../index.html
+        --preload-file=${CMAKE_CURRENT_SOURCE_DIR}/shaders@/shaders
+        )
     
+
 else()
     add_library(Viewer SHARED calc.cpp)
 endif()
