Shadow mapping first version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,10 +26,14 @@ if (DEFINED EMSCRIPTEN)
         --shell-file=../index.html
         --preload-file=${CMAKE_CURRENT_SOURCE_DIR}/shaders@/shaders
         )
-    set_property(TARGET Viewer PROPERTY LINK_DEPENDS 
-        ${CMAKE_CURRENT_SOURCE_DIR}/shaders/frag.glsl
-        ${CMAKE_CURRENT_SOURCE_DIR}/shaders/vertex.glsl
-    )
+
+    file(GLOB_RECURSE SHADER_REFERENCES ${CMAKE_CURRENT_SOURCE_DIR}/shaders/*.glsl)
+    set_property(TARGET Viewer PROPERTY LINK_DEPENDS ${SHADER_REFERENCES})
+
+    # set_property(TARGET Viewer PROPERTY LINK_DEPENDS 
+    #     ${CMAKE_CURRENT_SOURCE_DIR}/shaders/frag.glsl
+    #     ${CMAKE_CURRENT_SOURCE_DIR}/shaders/vertex.glsl
+    #)
     target_compile_definitions(Viewer PUBLIC "$<$<CONFIG:DEBUG>:DEBUG>")
 
 endif()
