--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,9 +32,11 @@ if (DEFINED EMSCRIPTEN)
 
     file(GLOB_RECURSE SHADER_REFERENCES ${CMAKE_CURRENT_SOURCE_DIR}/package/shaders/*.glsl)
     file(GLOB_RECURSE MODEL_REFERENCES ${CMAKE_CURRENT_SOURCE_DIR}/package/models/*.glb)
+    file(GLOB_RECURSE CUBEMAP_REFERENCES ${CMAKE_CURRENT_SOURCE_DIR}/package/cubemap/*.jpg)
     set_property(TARGET Viewer PROPERTY LINK_DEPENDS 
         ${SHADER_REFERENCES}
         ${MODEL_REFERENCES}
+        ${CUBEMAP_REFERENCES}
         ${CMAKE_CURRENT_SOURCE_DIR}/index.html)
 
     target_compile_definitions(Viewer PUBLIC "$<$<CONFIG:DEBUG>:DEBUG>")
